Fixed navbar overflow

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -15,6 +15,7 @@ body {
   margin: 0;
   padding: 0;
   background-color: #90a158;
+  overflow-x: hidden;
 }
 .absoluteFooter{
   position: fixed;
@@ -226,12 +227,14 @@ body {
   height: 80px;
   background-color: rgb(17, 71, 35);
   display:  grid;
-  grid-template-columns: 900px 100px 100px 100px;
+  grid-template-columns: repeat(5, 1fr);
   grid-template-rows: 100%;
   align-items: center;
   justify-content: center;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 25px;
+  box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 
@@ -245,7 +248,7 @@ body {
   justify-content: center;
   align-items: center;
   height: 90%;
-  margin: 6px 6px;
+  margin: 0 6px;
   border-radius: 5px;
 }
 
